--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<legend>Contact Information</legend>
 				<div class="form-group">
 					<label for ="Fullname">Full Name (First and Last) <span class="required">*</span></label>
+					<input type="text" id="fullname" name="fullanme" aria-required="true">
 		</article>
 	</main>
 	<footer>
