--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 				<div class="form-group">
 					<label for ="Fullname">Full Name (First and Last) <span class="required">*</span></label>
 					<input type="text" id="fullname" name="fullanme" aria-required="true">
+				</div>
+				<div class="form-group">
+					<label for="phone">Phone Number</label>
+					<input type="tel" id="phone" name="phone">
+				</div>
 		</article>
 	</main>
 	<footer>
