--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
 				<legend>Contact Information</legend>
 				<div class="form-group">
 					<label for ="Fullname">Full Name (First and Last) <span class="required">*</span></label>
-					<input type="text" id="fullname" name="fullanme" aria-required="true">
+					<input type="text" id="fullname" name="fullanme" required aria-required="true">
 				</div>
 				<div class="form-group">
 					<label for="phone">Phone Number</label>
 					<input type="tel" id="phone" name="phone">
 				</div>
+				<div class="from-group">
+					<label for="email">Email Address<span class="required">*</span></label>
+					<input type="email" id="email" name="email" required aria-required="true">
+				</div>
+				<fieldset class="form-group">
+					<legend>Preferred Contact Method<span class="required">*</span></legend>
+					<div>
+						<input type="radio" id="contact-email" name="contact_method" value="email" required aria-required="true">
 		</article>
 	</main>
 	<footer>
