--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 					<legend>Preferred Contact Method<span class="required">*</span></legend>
 					<div>
 						<input type="radio" id="contact-email" name="contact_method" value="email" required aria-required="true">
+						<label for="contact-email">Email</label>
+					</div>
+					<div>
+						<input type="radio" id="contact-phone" name="contact_method" value="phone">
+						<label for="contact-phone">Phone</label>
+						</div>
+				</fieldset>
 		</article>
 	</main>
 	<footer>
