--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
                             <option value="WY">Wyoming</option>
                         </select>
                     </div>
+					<div class="form-group">
+						<label for="comments">Comments</label>
+						<textarea id="comments" name="comments" rows="4"></textarea>
+					</div>
+					<div class="form-group">
+						<button type="submit">Submit</button>
+					</div>
+					<p><span class="required">*</span></p>
+			</fieldset>
+		</form>
+
 		</article>
 	</main>
 	<footer>
