--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Jonas Gonzales"> 
 	<title>Form Activity Solution File</title>
-	<link rel="stylesheet" href="styles.css>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<a href="#main-content" id="skipLink">Skip to main content</a>
@@ -119,6 +119,7 @@
 					<p><span class="required">*</span></p>
 			</fieldset>
 		</form>
+
 		</article>
 	</main>
 	<footer>
