--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<form id="contact-form" method="POST" action="https://wp.zybooks.com/form-viewer.php"></form>
 			<fieldset>
-				<legend>Contact Information>
+				<legend>Contact Information</legend>
 				<div class="form-group">
 					<label for ="Fullname">Full Name (First and Last) <span class="required">*</span></label>
 					<input type="text" id="fullname" name="fullanme" required aria-required="true">
