--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<fieldset>
 				<legend>Contact Information</legend>
 				<div class="form-group">
-					<label for ="Fullname">Full Name (First and Last) <span class="required">*</span></label>
-					<input type="text" id="fullname" name="fullanme" required aria-required="true">
+					<label for="Fullname">Full Name (First and Last)<span class="required">*</span></label>
+					<input type="text" id="Fullname" name="fullanme" aria-required="true">
 				</div>
 				<div class="form-group">
 					<label for="phone">Phone Number</label>
@@ -39,12 +39,12 @@
 				</div>
 				<div class="from-group">
 					<label for="email">Email Address<span class="required">*</span></label>
-					<input type="email" id="email" name="email" required aria-required="true">
+					<input type="email" id="email" name="email" aria-required="true">
 				</div>
 				<fieldset class="form-group">
 					<legend>Preferred Contact Method<span class="required">*</span></legend>
 					<div>
-						<input type="radio" id="contact-email" name="contact_method" value="email" required aria-required="true">
+						<input type="radio" id="contact-email" name="contact_method" value="email" aria-required="true">
 						<label for="contact-email">Email</label>
 					</div>
 					<div>
@@ -55,7 +55,7 @@
 
 				<div class="form-group">
                         <label for="state">State of Residence <span class="required">*</span></label>
-                        <select id="state" name="state" required aria-required="true">
+                        <select id="state" name="state" aria-required="true">
                             <option value="">Select a state</option>
                             <option value="AL">Alabama</option>
                             <option value="AK">Alaska</option>
